--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button mat-icon-button class="nav-icon" aria-label="navigation burger menu button">
     <mat-icon>menu</mat-icon>
   </button>
   <span>Social Mint</span>
   <span class="example-spacer"></span>
-</mat-toolbar>s
+</mat-toolbar>
